--- a/stylesheet.less
+++ b/stylesheet.less
@@ -168,6 +168,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
 .bk-pt-default .main {
   padding-top: 6em;
+  min-height: 600px;
 }
 
 /* ===============================
