changes in navigation,added style to dropbox button and added min-height to default pages

--- a/default.twig
+++ b/default.twig
@@ -5,7 +5,7 @@
 <div class="bk-pt-default">
 
 
-<div class="right-nav">
+<div class="left-nav">
         <header>
             {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
              {{widget('content', 'headercontent', {"content":"<p>lorem</p>"})|raw}}
@@ -20,8 +20,8 @@
 <div class="top-nav wrapper clearfix">
     <header>
         <div class="companyheader clearfix">
-        {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
-        {{widget('content', 'headercontent', {"content":"<p>lorem</p>"})|raw}}
+            {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
+             {{widget('content', 'headercontent', {"content":"<p>lorem</p>"})|raw}}
         </div>
     </header>
         {{widget('extendednavigation', 'navigationheader', {})|raw}}
@@ -30,10 +30,12 @@
 
 
 
-<div class="left-content">
+<div class="right-content">
 
     <div class="main wrapper clearfix">
-        {{zone('main')|raw}}
+
+            {{zone('main')|raw}}
+
     </div>  
 
 </div>
