--- a/home.twig
+++ b/home.twig
@@ -5,7 +5,7 @@
 <div class="bk-pt-homepage">
 
 
-<div class="right-nav">
+<div class="left-nav">
         <header>
             {{widget('companyname', 'companyname', {"business": "profile"})|raw}}
              {{widget('content', 'headercontent', {"content":"<p>lorem</p>"})|raw}}
@@ -30,7 +30,7 @@
 
 
 
-<div class="left-content">
+<div class="right-content">
 
     <div class="main wrapper clearfix">
 
