--- a/stylesheet.less
+++ b/stylesheet.less
@@ -119,7 +119,7 @@ blockquote:before {
 }
 
 
-.right-nav {
+.left-nav {
   background: transparent;
   z-index: 9999;
   width: 182px;
@@ -130,8 +130,9 @@ blockquote:before {
   margin-top: 6.4em;
 }
 
-.left-content { 
+.right-content { 
 padding-left: 190px;
+min-height: 700px;
 }
 
 .main {
@@ -140,19 +141,19 @@ padding-left: 190px;
 
 
 @media only screen and (max-width: 1500px) { 
-  .left-content {
+  .right-content {
     width: 90%;
   }
 }
 
 @media only screen and (max-width: 1280px) { 
-  .left-content {
+  .right-content {
     width: 80%;
   }
 }
 
 @media only screen and (max-width: 900px) { 
-  .left-content {
+  .right-content {
     width: 75%;
   }
 }
@@ -294,6 +295,7 @@ footer h4 {
 
 
 .vertical-nav .widget.extendednavigation {
+    text-align: left;
     position: relative;
 }
 
@@ -342,13 +344,9 @@ footer h4 {
     text-transform: uppercase;
 }
 
-.vertical-nav .widget.extendednavigation ul li:last-child a {
-    padding-bottom: 0;
-}
-
 .vertical-nav .widget.extendednavigation ul li.folder .text {
     display: block;
-    padding: 10px 0 10px 0;
+    padding: 10px 22px 10px 0;
     font-family: @font-swatch6-font-family;
     font-size: @font-swatch6-font-size;
     font-weight: @font-swatch6-font-weight;
@@ -368,15 +366,15 @@ footer h4 {
 
 .vertical-nav .widget.extendednavigation ul li.folder {
     background-image: image('/images/arrow-down.png');
-    background-position: right 30px;
+    background-position: right center;
     background-repeat: no-repeat;
     cursor: pointer;
     text-align: right;
-    padding: 10px 30px 10px 10px;
+    padding: 0;
 }
 
 .vertical-nav .widget.extendednavigation ul li.folder .text:hover {
-    color: lighten(@font-swatch6-color,30%);
+    color: @font-swatch6-color-hover;
 }
 
 .vertical-nav .widget.extendednavigation ul li.folder > ul > li .text:hover {
@@ -386,25 +384,20 @@ footer h4 {
 
 /* DROPDOWN MENU */
 
-.vertical-nav .widget.extendednavigation ul > li > ul {
-  padding-top: 0px;
-  margin-right: -20px;
-}
-
-
-.vertical-nav .widget.extendednavigation ul li.folder ul li .text {
-  color: lighten(@font-swatch6-color,15%);
-}
-
-.vertical-nav .widget.extendednavigation ul > li > ul > li > a {
-  padding: 0;
-}
-
 .vertical-nav .widget.extendednavigation li > ul {
-    display: block;
+    display: none
 }
 
-
+.vertical-nav .widget.extendednavigation li:hover > ul {
+    display: block;
+    position: absolute;
+    width: 100%;
+    background-color: @color-swatch7;
+    z-index: 500;
+    padding: 0;
+    margin: -44px 0 0 171px;
+    border-left: 1px solid @color-swatch4;
+}
 
 .vertical-nav .widget.extendednavigation li:hover > ul > li {
     display: block;
@@ -416,9 +409,15 @@ footer h4 {
 
 .vertical-nav .widget.extendednavigation li:hover > ul > li > a {
     display: block;
-    color: @color-swatch5;
     padding: 0;
 }
+
+.vertical-nav .widget.extendednavigation ul li.folder ul li .text {
+  color: @font-swatch6-color;
+  text-align: left;
+  padding: 10px 15px 10px 10px;
+}
+
 
 /* EXTENDED NAVIGATION - INSIDE ZONE */
 
@@ -1019,6 +1018,34 @@ hr.line.align-right {
 }
 
 /* ===============================
+   DROPBOX BUTTON
+   =============================== */
+
+
+.widget.dropbox button {
+  margin: 0;
+  padding: 16px 22px 16px 45px;
+  background-image: image('/images/dropbox-icon.png');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: 19px center;
+  margin: 2.2em auto;
+  border: 1px solid @color-swatch6;
+  font-family: @font-swatch7-font-family;
+  font-size: @font-swatch7-font-size;
+  font-weight:@font-swatch7-font-weight;
+  background-color: @font-swatch7-background-color;
+  color: @font-swatch7-color;
+  text-decoration: none;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
+
+.widget.dropbox button:hover {
+  background-color: @font-swatch7-background-color-hover;
+}
+
+/* ===============================
    PAYPAL BUTTON
    =============================== */
 
@@ -1468,7 +1495,7 @@ footer .widget.profile .twitter span {
   }
 
 
-.left-content {
+.right-content {
   width: 90%;
   margin: 0 5%;
   padding: 0;
@@ -1479,7 +1506,7 @@ footer .widget.profile .twitter span {
     padding: 1em 0;
 }
 
-.right-nav {
+.left-nav {
   display: none;
 }
 
