changed arrow position in dropdown menu

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -366,7 +366,7 @@ footer h4 {
 
 .vertical-nav .widget.extendednavigation ul li.folder {
     background-image: image('/images/arrow-down.png');
-    background-position: right center;
+    background-position: 152px center;
     background-repeat: no-repeat;
     cursor: pointer;
     text-align: right;
