--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1025,7 +1025,7 @@ hr.line.align-right {
    =============================== */
 
 
-.widget.dropbox button {
+.widget.dropbox .b-wrap .btn {
   margin: 0;
   padding: 16px 22px 16px 45px;
   background-image: image('/images/dropbox-icon.png');
@@ -1044,8 +1044,18 @@ hr.line.align-right {
   cursor: pointer;
 }
 
-.widget.dropbox button:hover {
+.widget.dropbox .b-wrap .btn:hover {
   background-color: @font-swatch7-background-color-hover;
+}
+
+.widget.dropbox .b-wrap .file-name {
+  font-family: @font-swatch5-font-family;
+  font-size: @font-swatch5-font-size;
+  font-weight: @font-swatch5-font-weight;
+  line-height: @font-swatch5-line-height;
+  color: @font-swatch5-color;
+  letter-spacing: @font-swatch5-letter-spacing;
+
 }
 
 /* ===============================
