changed padding for footer on desktop

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -226,7 +226,7 @@ header nav {
 
 footer {
     background-color: @color-swatch2;
-    padding: 0 0 0 230px;
+    padding: 20px 0 0 230px;
     margin-top: 1em;
     color: @color-swatch6;
     text-align: left;
