--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,3 +1,6 @@
+@import "@{templateCommon}/paypal.less";
+@import "@{templateCommon}/dropbox.less";
+
 body {
     background-color: @color-swatch1;
     margin: 0;
