changed id name for slideshow on homepage

--- a/home.twig
+++ b/home.twig
@@ -35,7 +35,7 @@
     <div class="main wrapper clearfix">
 
         <div class="feature-slideshow">
-             {{widget('responsiveslideshow', 'responsiveslideshow',
+             {{widget('responsiveslideshow', 'homepageresponsiveslideshow',
               {'duration':'3',
                 'transSpeed': '1000',
                 'transType': 'fade',
