fix on slideshow

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1374,7 +1374,7 @@ footer .widget.profile .twitter span {
 /* ===============================
    SLIDESHOW WIDGET
    =============================== */
-.widget.responsiveslideshow .slideshow-image-list {
+.feature-slideshow .widget.responsiveslideshow .slideshow-image-list {
     height: 600px;
 }
 
@@ -1747,6 +1747,7 @@ header .widget.content p {
 
     /* SLIDESHOW */
 
+    .feature-slideshow .widget.responsiveslideshow .slideshow-image-list,
     .widget.responsiveslideshow .slideshow-image-list, 
     .widget.responsiveslideshow .slideshow-widget {
         height:400px;
@@ -1879,7 +1880,7 @@ header .widget.content p {
       display:none;
     }
 
-    .widget.responsiveslideshow .slideshow-image-list, .widget.responsiveslideshow .slideshow-widget {
+    .feature-slideshow .widget.responsiveslideshow .slideshow-image-list, .widget.responsiveslideshow .slideshow-image-list, .widget.responsiveslideshow .slideshow-widget {
         height: 200px;
     }
 
