undid fix on slideshow gallery

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1374,7 +1374,7 @@ footer .widget.profile .twitter span {
 /* ===============================
    SLIDESHOW WIDGET
    =============================== */
-.feature-slideshow .widget.responsiveslideshow .slideshow-image-list {
+.widget.responsiveslideshow .slideshow-image-list {
     height: 600px;
 }
 
@@ -1747,7 +1747,6 @@ header .widget.content p {
 
     /* SLIDESHOW */
 
-    .feature-slideshow .widget.responsiveslideshow .slideshow-image-list,
     .widget.responsiveslideshow .slideshow-image-list, 
     .widget.responsiveslideshow .slideshow-widget {
         height:400px;
@@ -1880,7 +1879,7 @@ header .widget.content p {
       display:none;
     }
 
-    .feature-slideshow .widget.responsiveslideshow .slideshow-image-list, .widget.responsiveslideshow .slideshow-image-list, .widget.responsiveslideshow .slideshow-widget {
+    .widget.responsiveslideshow .slideshow-image-list, .widget.responsiveslideshow .slideshow-widget {
         height: 200px;
     }
 
