--- a/home.twig
+++ b/home.twig
@@ -4,36 +4,28 @@
 
 <div class="bk-pt-homepage">
 
-
 <div class="left-nav">
-        <header>
-            {{widget('companyname', 'sidecompanyname', {"business": "profile"})|raw}}
-             {{widget('content', 'sideheadercontent', {"content":"<p>lorem</p>"})|raw}}
-        </header>
-        <div class="vertical-nav">
-            {{widget('extendednavigation', 'sidenavigationheader', {})|raw}}
-        </div>
+    <header class="bk-header clearfix">
+        {{widget('companyname', 'sidecompanyname', {"business": "profile"})|raw}}
+        {{widget('content', 'sideheadercontent', {"content":"<p>lorem</p>"})|raw}}
+    </header>
+    <div class="vertical-nav clearfix">
+        {{widget('extendednavigation', 'sidenavigationheader', {})|raw}}
+    </div>
 </div>
-
-
 
 <div class="top-nav wrapper clearfix">
-    <header>
+    <header class="bk-header clearfix">
         <div class="companyheader clearfix">
             {{widget('companyname', 'topcompanyname', {"business": "profile"})|raw}}
-             {{widget('content', 'topheadercontent', {"content":"<p>lorem</p>"})|raw}}
+            {{widget('content', 'topheadercontent', {"content":"<p>lorem</p>"})|raw}}
         </div>
     </header>
-        {{widget('extendednavigation', 'topnavigationheader', {})|raw}}
+    {{widget('extendednavigation', 'topnavigationheader', {})|raw}}
 </div>
 
-
-
-
 <div class="right-content">
-
     <div class="main wrapper clearfix">
-
         <div class="feature-slideshow">
              {{widget('responsiveslideshow', 'homepageresponsiveslideshow',
               {'duration':'3',
@@ -53,21 +45,15 @@
                   ]
                 })|raw}}
         </div>
-
-            {{zone('main')|raw}}
-
+        {{zone('main')|raw}}
     </div>  
-
 </div>
 
-
-
-<footer>
+<footer class="bk-footer">
     <div class="wrapper clearfix">       
-            {{widget('profile', 'footercolumn1profileEmail', { 'profileType':'email', 'email':'profile'})|raw}}
+        {{widget('profile', 'footercolumn1profileEmail', { 'profileType':'email', 'email':'profile'})|raw}}
     </div>
 </footer>
-
 
 </div>
 
