Added missing content bracket

--- a/default.twig
+++ b/default.twig
@@ -7,7 +7,7 @@
 <div class="left-nav">
     <header class="bk-header">
         {{widget('companyname', 'sidecompanyname', {"business": "profile"})|raw}}
-        {widget('content', 'sideheadercontent', {"content":"<p>lorem</p>"})|raw}}
+        {{widget('content', 'sideheadercontent', {"content":"<p>lorem</p>"})|raw}}
     </header>
     <div class="vertical-nav">
         {{widget('extendednavigation', 'sidenavigationheader', {})|raw}}
