Added text-indent to deal with social icons in foot

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -782,6 +782,8 @@ hr.line {
     margin-right: 6px;
     margin-bottom: 8px;
     text-decoration: underline;
+    text-indent:99999px;
+    overflow:hidden;
 }
 
 .widget.profile .bk-profile-socialicons span a {
