--- a/stylesheet.less
+++ b/stylesheet.less
@@ -59,7 +59,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   =============================== */
 
 .bk-header {
-  padding: 20px 0 0;
+  padding: 20px 10px 0;
   margin: 0;
   border-right: 1px solid @color-swatch4;
   @media only screen and (max-width: 768px) { 
@@ -100,10 +100,9 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   line-height:@font-swatch10-line-height;
   letter-spacing: @font-swatch10-letter-spacing;
   font-size: @font-swatch10-font-size;
-  padding: 0 10px 0 0;
+  padding: 0;
   text-align: right;
   @media only screen and (max-width: 768px) { 
-    padding-left: 30px;
     text-align: left;
     width: 100%;
   }
@@ -1164,9 +1163,13 @@ color: @color-swatch1;
     border-top: 4px solid @color-swatch2; 
   }
 
-  .bk-header {
+.bk-pt-default .main {
+  padding-top: 2em;
+}
+
+.bk-header {
   padding: 20px 0 14px;
-  width: 100%;
+  width: 90%;
   margin: 0 auto;
   border-right: none;
 }
@@ -1218,6 +1221,8 @@ color: @color-swatch1;
     display: block;
     float: left;
     padding: 0;
+    width: 80%;
+    margin-bottom: 1em;
 }
 
 /* COMPANY NAME */
@@ -1260,10 +1265,8 @@ color: @color-swatch1;
 
   .widget .extendednavigation a.pull {
     display: block;
-    float: right;
-    margin-right: 25px;
-    top: -52px;
-    width: 50%;
+    margin-right: 5%;
+    top: 5px;
     position: absolute;
   }
 
@@ -1315,6 +1318,17 @@ color: @color-swatch1;
 
   .widget.extendednavigation ul li.folder {
     padding: 16px 30px;
+  }
+
+  .widget .extendednavigation ul li.folder:after {
+    content: "";
+    position: absolute;
+    top: 30px;
+    display: block;
+    z-index: 9999999;
+    right: 5%;
+    font-size: 10px;
+    color: @color-swatch5;
   }
 
   .widget .extendednavigation li {
