lighten extended nav back colour

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1246,7 +1246,7 @@ color: @color-swatch1;
   .widget.extendednavigation {
       display: block;
       width: 100%;
-      background-color: @color-swatch3;
+      background-color: lighten(@color-swatch3,8%);
       min-height: 44px;
       clear: both;
   }
