--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1509,7 +1509,7 @@ body {
 }
 
 .widget {
-    &.bloglistposts {
+    &.blogpostlist {
         .blog-post-item {
             border-bottom: 1px dotted fade(@color-swatch5, 50%);
         }
