add alignment to extended nav

--- a/default.twig
+++ b/default.twig
@@ -10,7 +10,7 @@
         {{widget('content', 'sideheadercontent', {"content":"<p>lorem</p>"})|raw}}
     </header>
     <div class="vertical-nav">
-        {{widget('extendednavigation', 'sidenavigationheader', {})|raw}}
+        {{widget('extendednavigation', 'sidenavigationheader', {"align":"right"})|raw}}
     </div>
 </div>
 
@@ -21,7 +21,7 @@
             {{widget('content', 'topheadercontent', {"content":"<p>lorem</p>"})|raw}}
         </div>
     </header>
-        {{widget('extendednavigation', 'topnavigationheader', {})|raw}}
+    {{widget('extendednavigation', 'topnavigationheader', {"align":"left"})|raw}}
 </div>
 
 <div class="right-content">
