--- a/stylesheet.less
+++ b/stylesheet.less
@@ -221,6 +221,19 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   padding: 10px 15px 10px 10px;
 }
 
+/* Selected state */
+
+.extendednavigation ul li.folder.selected ul li .text {
+    color: @font-swatch6-color;
+}
+
+.extendednavigation ul li.selected, .extendednavigation ul li:hover ul li.selected, .extendednavigation ul li.folder.selected ul li.selected, .extendednavigation ul li.folder.selected {
+    a, .text {
+        color: @font-swatch6-color-hover;
+        text-decoration: underline;
+    }
+}
+
 
 /* EXTENDED NAVIGATION - INSIDE ZONE */
 
@@ -1278,12 +1291,24 @@ body {
  .widget .extendednavigation ul {
     border-bottom: 1px solid lighten(@color-swatch6,30%);
     padding: 0;
-    margin-top: 44px;
+    margin-top: 44px; 
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
   }
+
+.widget.extendednavigation ul li, .widget.extendednavigation ul li.folder {
+  padding: 0;
+  margin: 0;
+}
+
+.widget.extendednavigation ul li:hover > ul > li {
+  padding: 0;
+  margin: 0;
+}
 
  .widget.extendednavigation ul li {
     border-bottom: 1px solid lighten(@color-swatch6,30%);
-    padding: 16px 30px;
     display: block;
   }
 
@@ -1306,28 +1331,17 @@ body {
     text-decoration: none;
 }
 
-  .widget.extendednavigation ul li.folder {
-    padding: 16px 30px;
-  }
-
-  .widget .extendednavigation ul li.folder:after {
-    content: "";
-    position: absolute;
-    top: 30px;
-    display: block;
-    z-index: 9999999;
-    right: 5%;
-    font-size: 10px;
-    color: @color-swatch5;
-  }
-
   .widget .extendednavigation li {
     width: 100%;
     padding: 0;
   }
 
-  .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-      padding: 5px 5px 5px 0;
+  .widget.extendednavigation ul li.folder ul li a {
+    padding: 0;
+  }
+
+  .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text, .widget.extendednavigation ul li.folder ul li .text {
+      padding: 10px 5px;
       margin: 0;
       color: @font-swatch6-color;
   }
@@ -1340,9 +1354,8 @@ body {
   .widget.extendednavigation ul li:hover > ul {
       display: block !important;
       width: 100%;
-      position: relative;
       z-index: 500;
-      margin-top: 16px;
+      margin-top: 0;
       background-color: darken(@color-swatch7,3%);
       border-bottom: none;
   }
@@ -1368,19 +1381,31 @@ body {
   }
 
   .widget.extendednavigation ul li:hover > ul li:first-child {
-    padding-top: 16px;
     border-top: none;
   }
 
     .widget.extendednavigation ul li:hover > ul li:last-child {
-    padding-top: 16px;
     border-bottom: none;
   }
 
-  .widget.extendednavigation li:hover > ul > li > a {
-    padding-left: 10px;
+   .widget .extendednavigation ul.align-right li.folder:after {
+      left: 5px;
+      right: inherit;
   }
 
+  div.widget .extendednavigation ul.align-center, div.widget.extendednavigation ul.align-center {
+    float: left;
+      li.folder .text {
+          padding: 10px 5px;
+      }
+  }
+
+  div.widget .extendednavigation ul.align-none, div.widget.extendednavigation ul.align-none {
+    float: left;
+      li.folder .text {
+          padding: 10px 5px;
+      }
+  }
 
     /* FEATURE */
 
