add clearfix class to nav to fix overlay in editor

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -131,6 +131,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
 .vertical-nav {
   .widget.extendednavigation {
+    .clearfix;
     position: relative;
     background-color: @color-swatch1;
     ul {
