add scroll to nav sidebar

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -21,6 +21,8 @@ body {
   width: 200px;
   height: 100%;
   position: fixed;
+  overflow-x: hidden;
+  overflow-y: auto;
   top: 0px;
   left: 0px;
   margin-top: 6.4em;
