--- a/stylesheet.less
+++ b/stylesheet.less
@@ -133,6 +133,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
 .vertical-nav {
   .widget.extendednavigation {
+    .clearfix;
     position: relative;
     background-color: @color-swatch1;
     ul {
