change padding in nav and header

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -61,7 +61,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   =============================== */
 
 .bk-header {
-  padding: 20px 10px 0;
+  padding: 20px 10px 150px;
   margin: 0;
   border-right: 1px solid @color-swatch4;
   @media only screen and (max-width: 768px) { 
@@ -137,7 +137,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     position: relative;
     background-color: @color-swatch1;
     ul {
-      padding: 150px 0 0 10px;
+      padding: 0 0 0 10px;
       margin: 0;
       width: 200px;
       background-color: transparent;
