--- a/stylesheet.less
+++ b/stylesheet.less
@@ -382,7 +382,7 @@ hr.line {
     .image-data {
         display: block;
         opacity: 0;
-        background-color: @color-swatch3;
+        background-color: @color-swatch4;
         -webkit-transition: all 0.4s ease-out;
         -moz-transition: all 0.4s ease-out;
         -o-transition: all 0.4s ease-out;
@@ -746,17 +746,14 @@ hr.line {
 
 .widget.socialicons span a,
 .widget.profile .bk-profile-socialicons span a {
-    background-color: @color-swatch4;
-    border: 1px solid fade(@color-swatch4, 50%);
+    background-color: @color-swatch3;
+    border: 1px solid fade(@color-swatch4,50%);
     display: inline-block;
     margin-right: 6px;
     margin-bottom: 8px;
     text-decoration: underline;
     text-indent:99999px;
     overflow:hidden;
-        -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
 }
 
 .widget.socialicons span a,
@@ -774,6 +771,64 @@ hr.line {
 .widget.socialicons span a {
   color: @font-swatch4-color;
 }
+
+
+
+/* SVG ICONS */
+
+
+.svg .logo-nav-info .widget.socialicons span.bk-socialicons-twitter a,
+.svg .logo-nav-info .widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
+    background-image: image('/images/social/square/socialicons-twitter.svg');
+}
+.svg .logo-nav-info .widget.socialicons span.bk-socialicons-linkedin a,
+.svg .logo-nav-info .widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a {
+    background-image: image('/images/social/square/socialicons-linkedin.svg')
+}
+.svg .logo-nav-info .widget.socialicons span.bk-socialicons-facebook a,
+.svg .logo-nav-info .widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a {
+    background-image: image('/images/social/square/socialicons-facebook.svg')
+}
+.svg .logo-nav-info .widget.socialicons span.bk-socialicons-rss a,
+.svg .logo-nav-info .widget.profile .bk-profile-socialicons span.bk-socialicons-rss a {
+    background-image: image('/images/social/square/socialicons-rss.svg')
+}
+.svg .logo-nav-info .widget.socialicons span.bk-socialicons-googleplus a,
+.svg .logo-nav-info .widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a {
+    background-image: image('/images/social/square/socialicons-googleplus.svg')
+}
+.svg .logo-nav-info .widget.socialicons span.bk-socialicons-youtube a,
+.svg .logo-nav-info .widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
+    background-image: image('/images/social/square/socialicons-youtube.svg')
+}
+
+/* PNG ICONS */
+
+.widget.socialicons span.bk-socialicons-twitter a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-twitter a {
+    background-image: image('/images/social/socialicons-twitter.png');
+}
+.widget.socialicons span.bk-socialicons-linkedin a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-linkedin a {
+    background-image: image('/images/social/socialicons-linkedin.png')
+}
+.widget.socialicons span.bk-socialicons-facebook a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-facebook a {
+    background-image: image('/images/social/socialicons-facebook.png')
+}
+.widget.socialicons span.bk-socialicons-rss a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-rss a {
+    background-image: image('/images/social/socialicons-rss.png')
+}
+.widget.socialicons span.bk-socialicons-googleplus a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-googleplus a {
+    background-image: image('/images/social/socialicons-googleplus.png')
+}
+.widget.socialicons span.bk-socialicons-youtube a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
+    background-image: image('/images/social/socialicons-youtube.png')
+}
+
 
 /* A:HOVER ICONS */
 
@@ -807,9 +862,18 @@ hr.line {
    PROFILE WIDGET
    =============================== */
 
-.widget.profile {
-  margin: 0 auto;
+
+.main .widget.profile {
+  margin: 0;
+}
+
+footer .widget.profile {
+  margin: 0 2.5em;
   padding-bottom: 10px;
+  text-align: left;
+  p, a, span {
+    color: @color-swatch1;
+  }
 }
 
 .widget.profile span,
@@ -829,7 +893,6 @@ hr.line {
 
 .bk-footer .widget.profile .bk-profile-email a {
   padding-right: 20px;
-  text-align: right;
 }
 
 /* FOOTER PROFILE - twitter in profile widget*/
@@ -837,17 +900,19 @@ hr.line {
 
 
 .widget.profile .twitter {
-  width: 50%;
+  .twitter-content {
+    text-align: left;
+  }
 }
 
-.widget.profile .twitter a {
+footer .widget.profile .twitter a {
    display: inline;
    color: @color-swatch1;
    font-size:@font-swatch5-font-size;
    text-decoration: underline;
 }
 
-.widget.profile .twitter a:hover {
+footer .widget.profile .twitter a:hover {
     color: @color-swatch1;
     text-decoration: underline;
 }
@@ -867,28 +932,27 @@ hr.line {
     border-bottom: none;
 }
 
-.widget.profile .twitter li .twitter-content p {
-  color: @color-swatch1;
-}
-
 .widget.profile .twitter .twitter-profile-pic {
   display: none;
 }
 
 
-.widget.profile .twitter .twitter-content span.bk-full-name {
-    font-family: @font-swatch4-font-family;
-    color: @color-swatch1;
-    font-size: @font-swatch5-font-size;
-}
-
-.widget.profile .twitter .twitter-content a:hover {
-  text-decoration: underline;
-  color: @color-swatch1;
-}
-
-.widget.profile .twitter time, .widget.profile .twitter span, .widget.profile .twitter span a {
-color: @color-swatch1;
+footer {
+    .widget.profile .twitter .twitter-content span.bk-full-name {
+        font-family: @font-swatch4-font-family;
+        color: @color-swatch1;
+        font-size: @font-swatch5-font-size;
+    }
+    .widget.profile .twitter .twitter-content a:hover {
+        text-decoration: underline;
+        color: @color-swatch1;
+    }
+    .widget.profile .twitter time, .widget.profile .twitter span, .widget.profile .twitter span a {
+        color: @color-swatch1;
+    }
+    .widget.profile .twitter li .twitter-content p {
+      color: @color-swatch1;
+    }
 }
 
 .bk-footer .widget.profile .twitter span {
@@ -906,7 +970,6 @@ color: @color-swatch1;
     border: none;
     margin: 0;
     padding: 0;
-    width: 50%;
 }
 
 .widget.profile fieldset label {
