--- a/stylesheet.less
+++ b/stylesheet.less
@@ -755,14 +755,14 @@ hr.line {
     overflow:hidden;
 }
 
-.widget.socialicons span a {
+.widget.socialicons span a, .widget.profile .bk-profile-socialicons span a {
     background-color: @font-swatch7-background-color;
     &:hover {
         background-color: @font-swatch7-background-color-hover;
     }
 }
 
-.widget.profile .bk-profile-socialicons span a {
+footer .widget.profile .bk-profile-socialicons span a {
     background-color: @color-swatch1;
     &:hover {
         background-color: @color-swatch3;
