--- a/stylesheet.less
+++ b/stylesheet.less
@@ -2037,7 +2037,7 @@ span.ecom-product-category {
 
 .widget.ecombasketsummary {
     h2 {
-        padding: 1em 0;
+        padding: 0.7em 0;
         @media @mobile {
             padding: 0.5em 0;
         }
@@ -2136,7 +2136,7 @@ span.ecom-product-category {
                     .basket-summary-productname, .basket-summary-pricepu {
                         display: block;
                     }
-                    .basket-summary-quantitybtn {
+                    .basket-summary-quantity {
                         background-color: transparent;
                         label {
                             display: block;
@@ -2145,6 +2145,9 @@ span.ecom-product-category {
                         button {
                             background-color: darken(@color-swatch1,3%);
                             margin: 0;
+                            width: 25px;
+                            height: 25px;
+                            padding: 1px;
                             font-size: 1em;
                             line-height: normal;
                             color: @color-swatch4;
