--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1768,13 +1768,16 @@ body {
         }
     }
 }
-.blog-list-footer a {
+.blog-list-footer {
+  padding-bottom: 2em;
+  a {
     background-color: @color-swatch2;
     color: @color-swatch3;
     &:hover {
         background-color: @font-swatch7-background-color;
         color: @font-swatch7-color;
     }
+  }
 }
 
 /* BLOG TIME */
