--- a/stylesheet.less
+++ b/stylesheet.less
@@ -808,6 +808,16 @@ footer .widget.profile .bk-profile-socialicons span a {
     background-image: image('/images/social/square/socialicons-youtube.svg')
 }
 
+.svg .widget.socialicons span.bk-socialicons-instagram a,
+.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-instagram a {
+    background-image: image('/images/social/socialicons-instagram.svg')
+}
+
+.svg .widget.socialicons span.bk-socialicons-pinterest a,
+.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-pinterest a {
+    background-image: image('/images/social/socialicons-pinterest.svg')
+}
+
 /* PNG ICONS */
 
 .widget.socialicons span.bk-socialicons-twitter a,
@@ -833,6 +843,16 @@ footer .widget.profile .bk-profile-socialicons span a {
 .widget.socialicons span.bk-socialicons-youtube a,
 .widget.profile .bk-profile-socialicons span.bk-socialicons-youtube a {
     background-image: image('/images/social/socialicons-youtube.png')
+}
+
+.widget.socialicons span.bk-socialicons-instagram a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-instagram a {
+    background-image: image('/images/social/socialicons-instagram.png')
+}
+
+.widget.socialicons span.bk-socialicons-pinterest a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-pinterest a {
+    background-image: image('/images/social/socialicons-pinterest.png')
 }
 
 /* ===============================
