Added navigation fix for PIRATE-4026

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -138,6 +138,8 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     .clearfix;
     position: relative;
     background-color: @color-swatch1;
+    height: 100%;
+    overflow: scroll;
     ul {
       padding: 0 20px;
       margin: 0;
