Added fix to navigation for PIRATE-4026

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -82,6 +82,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   border-right: 1px solid @color-swatch4;
   width: 240px;
   display: inline-block;
+  height: 100%;
 }
 
 .companyheader {
