--- a/home.twig
+++ b/home.twig
@@ -17,8 +17,8 @@
 <div class="top-nav wrapper clearfix">
     <header class="bk-header clearfix">
         <div class="companyheader clearfix">
-            {{widget('companyname', 'topcompanyname', {"business": "profile"})|raw}}
-            {{widget('content', 'topheadercontent', {"content":"<p>lorem</p>"})|raw}}
+            {{widget('companyname', 'sidecompanyname', {"business": "profile"})|raw}}
+            {{widget('content', 'sideheadercontent', {"content":"<p>lorem</p>"})|raw}}
         </div>
     </header>
     {{widget('extendednavigation', 'topnavigationheader', {"align":"left"})|raw}}
