--- a/migration/migration.less
+++ b/migration/migration.less
@@ -1,109 +1,121 @@
+
 // -----------------------------
-// Migration Styles
+//  Migration Styles
 // -----------------------------
+
+
 
 
 #migrated-site {
 
 
-// Stylseheet overrides
-// -----------------------------
+    // Stylesheet overrides
+    // -----------------------------
 
 
-// Template wrapper (replace with corresponding template classes)
-.main.wrapper {
-  width: 100%;
-  max-width: 100%;
-  margin: 0;
+    &.edit .left-nav {
+        left: 100px;
+        z-index: 0;
+    }
+
+
+    .main.wrapper {
+        max-width: 100%;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+
+
+    .feature-slideshow {
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 1em;
+        width: 90%;
+
+        @media only screen and (min-width: 1140px) {
+            margin: 0 2.5em;
+            width: 960px;
+        }
+    }
+
+
+    .bk-footer {
+        margin: 0;
+    }
+
+
+
+
+    // Migration styles
+    // -----------------------------
+
+
+    @container-width: 960px;
+    @spacing__first--desktop: 1em;
+    @widget__spacing--other: 15px;
+
+
+    .empty-zone,
+    #page-zones__main:empty,
+    .site-width-container,
+    #page-zones__main > .widget:not([data-name="row"]),
+    .row:not(.widget):not(.row--width-no-padding) .row__container {
+        margin-left: 5%;
+        margin-right: 5%;
+        max-width: 90%;
+
+        @media only screen and (min-width: 1140px) {
+            max-width: @container-width;
+            margin-left: 2.5em;
+            margin-right: 2.5em;  
+        }
+    }
+
+
+    // Move spacing to first widget in the main zone (not sections)
+    &.edit #page-zones__main-overlay + .widget:not([data-name="row"]),
+    #page-zones__main > .widget:not([data-name="row"]):first-child {
+        margin-top: @spacing__first--desktop;
+    }
+
+
+    // Move spacing to last widget in the main zone (not sections)
+    #page-zones__main > .widget:not([data-name="row"]):last-child {
+        margin-bottom: @spacing__first--desktop;
+    }
+
+
+    // Add spacing to the top of a widget or section when it follows a widget / section
+    #page-zones__main > [data-name="row"] + .widget:not([data-name="row"]),
+    #page-zones__main > .widget:not([data-name="row"]) + [data-name="row"] {
+        margin-top: @widget__spacing--other;
+    }
+
+
+    #page-zones__main > [data-name="row"] + .widget:not(.row) {
+        margin-bottom: @widget__spacing--other;
+    }
+
+
+    // Remove spacing if widget follows a light section
+    #page-zones__main > [data-name="row"].style--light + .widget:not([data-name="row"]) {
+        margin-top: 0;
+    }
+
+
+
+
+    // UI Resets
+    // -----------------------------
+
+
+    .row-overlay:before {
+        background-color: transparent!important;
+    }
+
+
+    .row-overlay__edit-button {
+        box-shadow: 0 2px 8px 0 rgba(51,51,51,0.45);
+    }
 }
-  
-// Main content spacing (replace with corresponding template class)
-.main {
-  padding: 0;
-}
-
-// Widget overflow to allow 10S overlays to display correctly
-.widget.content {
-  overflow: inherit;
-}
-
-
-
-
-// Migration styles
-// -----------------------------
-
-
-// Replace with corresponding template values
-@container-width: 960px;
-
-@spacing__first--desktop: 40px;
-@spacing__first--tablet:  30px;
-@spacing__first--mobile:  20px;
-
-@spacing--other: 30px;
-
-
-// Applies spacing to widgets to mimic container width
-.empty-zone,
-#page-zones__main:empty,
-#page-zones__main > .widget:not(.row),
-.row:not(.widget):not(.row--width-no-padding) .row__container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: @container-width;
-  width: 90%;
-}
-
-
-// Move spacing to first widget in the main zone (not sections)
-&.edit #page-zones__main-overlay + .widget:not(.row),
-#page-zones__main > .widget:not(.row):first-child {
-  margin-top: @spacing__first--desktop;
-
-  @media @tablet {
-    margin-top: @spacing__first--tablet;
-  }
-  @media @mobile {
-    margin-top: @spacing__first--mobile;
-  }
-}
-
-
-// Move spacing to last widget in the main zone (not sections)
-#page-zones__main > .widget:not(.row):last-child {
-  margin-bottom: @spacing__first--desktop;
-
-  @media @tablet {
-    margin-bottom: @spacing__first--tablet;
-  }
-  @media @mobile {
-    margin-bottom: @spacing__first--mobile;
-  }
-}
-
-
-// Add spacing to the top of a widget when it follows a section
-#page-zones__main > .row + .widget:not(.row) {
-  margin-top: @spacing--other;
-}
-
-
-// Remove spacing if widget follows a light section (change to dark if template has a dark BG)
-#page-zones__main > .row.style--light + .widget:not(.row) {
-  margin-top: 0;
-}
-
-
-// Adds spacing to the section when a widget is before it
-#page-zones__main > .widget:not(.row) + .row {
-  margin-bottom: @spacing--other;
-  margin-top: @spacing--other;
-
-  &:not(:last-child) {
-       margin-bottom: 0;
-  }
-}
-
-
-} // End of #migrated-site
